[project]
name = "cvewb"
version = "0.1.0"
description = "CVE Workbench - AI-assisted vulnerability analysis platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0"
]
